[gd_scene load_steps=9 format=3 uid="uid://duyvbtfa7pba5"]

[ext_resource type="FontFile" uid="uid://b6m6ipx8qld3" path="res://fonts/Montserrat-Medium.ttf" id="1_3xbdh"]
[ext_resource type="Script" path="res://UI/UserInterface.gd" id="2_4ftkh"]
[ext_resource type="AudioStream" uid="uid://bnlu0kulup7vw" path="res://sounds/boing.wav" id="3_l8eu1"]

[sub_resource type="Theme" id="Theme_5qn46"]
default_font = ExtResource("1_3xbdh")
default_font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_2aak2"]
line_spacing = 0.0
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xy7dk"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_owax2"]
font_size = 28
font_color = Color(0.752941, 0.0352941, 0.137255, 1)

[sub_resource type="LabelSettings" id="LabelSettings_q2ehp"]
font_size = 28

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1935.0
offset_bottom = 1085.0
theme = SubResource("Theme_5qn46")
script = ExtResource("2_4ftkh")

[node name="PlayerExitTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 12.0
offset_right = 191.0
offset_bottom = 86.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_2aak2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retry" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.219608, 0.219608, 0.247059)

[node name="Label" type="Label" parent="Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -15.5
offset_right = 74.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Enter to retry"
label_settings = SubResource("LabelSettings_xy7dk")

[node name="WarningLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 853.0
offset_top = 359.0
offset_right = 1057.0
offset_bottom = 456.0
text = "Warning"
label_settings = SubResource("LabelSettings_owax2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WarningTimer" type="Timer" parent="."]

[node name="HpLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 792.0
offset_top = 8.0
offset_right = 1105.0
offset_bottom = 95.0
text = "Hp:0"

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="GameTimer"]
offset_left = 1644.0
offset_top = 14.0
offset_right = 1904.0
offset_bottom = 103.0
text = "time"
label_settings = SubResource("LabelSettings_q2ehp")

[node name="SquashPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_l8eu1")

[connection signal="timeout" from="WarningTimer" to="." method="_on_warning_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
